fix footer not being at the bottom when page content is too short

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,7 @@
     --sec-bg: #0c0d17;
     --link-fg: #7c43bd;
     --link-fg-hover: #9c03fd;
+    --content-width: 800px;
 }
 
 /* giving some offset for anchors, so 
@@ -26,11 +27,20 @@ html {
 }
 
 body {
-    max-width: 800px;
+    position: relative;
+    min-height: 100vh;
+    width: 100%;
     padding: 0 1em;
     margin: auto;
     background: var(--main-bg);
     color: var(--main-fg);
+}
+
+/* extra space for footer */
+body::after {
+  content: '';
+  display: block;
+  height: 150px;
 }
 
 /* links */
@@ -79,7 +89,7 @@ a:hover {
 /* header and footer areas */
 nav {
     width: 100%;
-    max-width: 800px;
+    max-width: var(--content-width);
     display: flex;
     position: fixed;
     top: 0;
@@ -118,8 +128,8 @@ nav {
 .article-meta, .menu a {
     color: var(--main-fg);
     text-decoration: none;
-    padding:0.7em 0.7em;
-    margin:0 0.3em 0.3em 0;
+    padding: 0.7em 0.7em;
+    margin: 0 0.3em 0.3em 0;
     box-sizing: border-box;
 }
 
@@ -128,8 +138,9 @@ nav {
 }
 
 .wrapper {
-    margin-top: 10em;
+    margin: 10em auto 0 auto;
     min-height: calc(100vh - 23.4em);
+    max-width: var(--content-width);
 }
 
 /* banner */
@@ -158,7 +169,9 @@ footer {
     line-height: 2em;
     position: absolute;
     width: 100%;
+    bottom: 0;
     left: 0;
+    text-align: center;
 }
 
 footer p {
@@ -171,7 +184,7 @@ footer p {
     margin: 0 0 0 0.6em;
 }
 
-.article-meta, footer { 
+.article-meta {
     text-align: center;
     margin-top: 5em;
 }
@@ -186,12 +199,13 @@ hr {
 /* misc elements */
 img, iframe, video { max-width: 100%; }
 
-main { 
+main {
     hyphens: auto;
-    margin-top: -50vh;
+    margin: -50vh auto 0 auto;
+    max-width: var(--content-width);
 }
 
-main p { 
+main p {
     text-align: justify; 
     line-height: 1.5rem;
 }
@@ -267,7 +281,6 @@ code.language-terminal::before {
     top: 5em;
     overflow-x: hidden;
     margin: 0;
-    margin-left: -25em;
     font-size: 1.1em;
 }
 
